描画順を制御できるように

--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -933,9 +933,6 @@
     <ClCompile Include="Application\SourceCode\Effect\SmokeEffect.cpp">
       <Filter>Application\Source\Effect</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Debugger\RendererWindow.cpp">
-      <Filter>NewEngine\Source\Debugger</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Render\Renderer.cpp">
       <Filter>NewEngine\Source\Render</Filter>
     </ClCompile>
@@ -992,9 +989,6 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Render\ShaderCompiler\InputLayout.cpp">
       <Filter>NewEngine\Source\Render\Shader</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Debugger\MainWindow.cpp">
-      <Filter>Uncategorized\Source</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Object\Component.cpp">
       <Filter>Uncategorized\Source\Component</Filter>
@@ -1100,6 +1094,12 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Component\GameObjectInfo\SpotLightInfo.cpp">
       <Filter>Uncategorized\Source\Component\GameObjectInfo</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Debugger\MainWindow.cpp">
+      <Filter>Uncategorized\Source\GuiWindow</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Debugger\RendererWindow.cpp">
+      <Filter>Uncategorized\Source\GuiWindow</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1607,9 +1607,6 @@
     <ClInclude Include="Application\SourceCode\Effect\SmokeEffect.h">
       <Filter>Application\Header\Effect</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Debugger\RendererWindow.h">
-      <Filter>NewEngine\Header\Debugger</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Render\Renderer.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
@@ -1669,9 +1666,6 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Util\NewEngineConstant.h">
       <Filter>NewEngine\Header</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Debugger\MainWindow.h">
-      <Filter>Uncategorized\Header</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Object\Component.h">
       <Filter>Uncategorized\Header\Component</Filter>
@@ -1780,6 +1774,12 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Component\GameObjectInfo\SpotLightInfo.h">
       <Filter>Uncategorized\Header\Component\GameObjectInfo</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Debugger\MainWindow.h">
+      <Filter>Uncategorized\Header\GuiWindow</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Debugger\RendererWindow.h">
+      <Filter>Uncategorized\Header\GuiWindow</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
