--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="NewEngine\Component\GameObjectInfo\DirectionalLightInfo.cpp" />
     <ClCompile Include="NewEngine\Component\GameObjectInfo\EmptyObjectInfo.cpp" />
     <ClCompile Include="NewEngine\Component\GameObjectInfo\GameObjectInfo.cpp" />
+    <ClCompile Include="NewEngine\Component\MaterialComponent.cpp" />
     <ClCompile Include="NewEngine\Component\ModelData.cpp" />
     <ClCompile Include="NewEngine\Component\GameObjectInfo\Object3DInfo.cpp" />
     <ClCompile Include="NewEngine\Component\GameObjectInfo\ParticleMeshInfo.cpp" />
@@ -377,6 +378,7 @@
     <ClInclude Include="NewEngine\Component\GameObjectInfo\CameraInfo.h" />
     <ClInclude Include="NewEngine\Component\GameObjectInfo\DirectionalLightInfo.h" />
     <ClInclude Include="NewEngine\Component\GameObjectInfo\EmptyObjectInfo.h" />
+    <ClInclude Include="NewEngine\Component\MaterialComponent.h" />
     <ClInclude Include="NewEngine\Component\ModelData.h" />
     <ClInclude Include="NewEngine\Component\GameObjectInfo\Object3DInfo.h" />
     <ClInclude Include="NewEngine\Component\GameObjectInfo\ParticleMeshInfo.h" />
